[package]
name = "raidar"
version = "1.0.0"
authors = ["4pto A_S <developers@4pto.io>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.1.1"
uint = { version = "0.9.3", default-features = false }
near-contract-standards = "4.0.0"
near-contract-tools = "0.7.2"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
